lanscape bugs squashed

--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ video {
 
 .mini-banner {
   height: 40vh;
-  background-image: url(./images/mini-banner.jpeg);
+  background-image: url(./images/mobile-banner.png);
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
@@ -679,21 +679,29 @@ h1 {
 @media only screen and (min-width: 375px) and (max-width: 1300px) {
 .title {
   background-image: url(./images/FOSTERfloating.png);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 25vh;
   width: 80%;
   background-size: contain;
   background-repeat: no-repeat;
   margin: 0 auto;
-  background-color: #5088B3;
+  position: relative;
+  bottom: -12em;
+  z-index: 1;
+  margin-top: -10em;
 }
 
   .banner {
-  background-image: url(./images/mini-banner.jpeg);
-  height: 60vh;
+  background-image: url(./images/mobile-banner.png);
+  height: 100vh;
   width: 100%;
-  background-size: contain;
+  background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
   margin: 0 auto;
+  position: relative;
 }
 
   video {
@@ -799,6 +807,33 @@ p {
 
 @media only screen and (max-width: 667px) and (orientation: landscape) { 
   .arrow {
-    bottom: 7em;
+    bottom: 5em;
+  }
+
+  .title {
+    left: 11.5em;
+    margin-bottom: 1.5em;
+  }
+
+  .banner {
+    background-position: bottom;
+    height: 110vh;
+  }
+
+  .info {
+    padding: 8em 12em;
+  }
+
+  .serv-ban {
+    overflow: hidden;
+  }
+
+  .serv-ban h1 {
+    right: -3.5em;
+  }
+
+  .centered {
+    bottom: 15em;
+    overflow: visible;
   }
 }
